--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 />
 
-    <title>Vite + React</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
